--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,6 +1,6 @@
 {
     "header": {
-        "welcome": "مرحبًا بك في GO TAXI",
+        "welcome": "مرحبًا بك في",
         "tagline": "سهولة وسرعة",
         "subTagline": "لتلبية كل احتياجاتك"
     },
@@ -59,5 +59,11 @@
         "contactUsButton": "اتصل بنا",
         "onWhatsapp": "عبر واتساب",
         "byCall": "اتصل بنا"
+    },
+    "payment": {
+        "paymentAmount": "مبلغ الدفع",
+        "submitButton": "إرسال",
+        "payWithCash": "الدفع نقدًا",
+        "or": "أو"
     }
 }
